feat: dashboard timeline
